src/test/deca/context/invalid/non_provided/assign_extend.deca
// Description:
//    Exemple utilisant l'instruction d'affectation 
//    avec des héritages
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 27/01/2020

class A {

}

class B extends A {

}

{
    A a = new A();
    B b;

    b = a;
}